[package]
name = "rust-sgx-tls"
version = "0.1.0"
authors = ["Paul O'Leary <paul@eluv.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
# mbedtls = {version="0.5", default-features = false, features = ["sgx"]}
mbedtls = { git = "https://github.com/paritytech/rust-mbedtls", branch = "update-build-script", default-features = false, features = ["sgx"] }